etc/iptables.rules
*nat
-A POSTROUTING -s 10.8.0.0/24 -o eth0 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT
:FORWARD ACCEPT
:OUTPUT ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

-A INPUT -p tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
# secure before postfix setup
-A INPUT -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 993 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 587 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

# Squid
#-A INPUT -p tcp --dport 3128 -m state --state NEW,ESTABLISHED -j ACCEPT

# VPN 
-A INPUT -p udp --dport 1194 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 1194 -m state --state NEW,ESTABLISHED -j ACCEPT

-A FORWARD -i tun+ -j ACCEPT

-A FORWARD -i ens+ -o docker0 -j ACCEPT

-I FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A INPUT -i ens+ -j LOGGING
-A FORWARD -i ens+ -j LOGGING
-A LOGGING -m limit --limit 2/hour -j LOG --log-prefix "iptables: REJECT: " --log-level 4
-A LOGGING -j REJECT

COMMIT
